-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 8, 9
-
Component/s: hotspot
-
b23
-
generic
-
solaris
Running the test on sparcv9 fails with this exception:
java.lang.RuntimeException: Heap has 8388608 bytes, expected to be less than 4194304
at TestMaxHeapSizeTools.checkGenMaxHeapSize(TestMaxHeapSizeTools.java:254)
at TestMaxHeapSizeTools.checkGenMaxHeapErgo(TestMaxHeapSizeTools.java:109)
at TestParallelHeapSizeFlags.main(TestParallelHeapSizeFlags.java:46)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:483)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:744)
java.lang.RuntimeException: Heap has 8388608 bytes, expected to be less than 4194304
at TestMaxHeapSizeTools.checkGenMaxHeapSize(TestMaxHeapSizeTools.java:254)
at TestMaxHeapSizeTools.checkGenMaxHeapErgo(TestMaxHeapSizeTools.java:109)
at TestParallelHeapSizeFlags.main(TestParallelHeapSizeFlags.java:46)
at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:57)
at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.lang.reflect.Method.invoke(Method.java:483)
at com.sun.javatest.regtest.MainWrapper$MainThread.run(MainWrapper.java:94)
at java.lang.Thread.run(Thread.java:744)
- is cloned by
-
JDK-8049864 TestParallelHeapSizeFlags fails with unexpected heap size
-
- Resolved
-
- relates to
-
JDK-8028254 gc/arguments/TestMinInitialErgonomics.java failed with unexpected initial heap size
-
- Closed
-
-
JDK-8044132 Quarantine unstable/broken GC tests
-
- Resolved
-
-
JDK-8048877 VM warning "Attempt to use MPSS failed" on Solaris SPARC
-
- Closed
-