8027915: TestParallelHeapSizeFlags fails with unexpected heap size on sparcv9

Reviewed-by: jmasa, sjohanss